# meimei

./: .flaskenv  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  config.py  pyproject.toml  wsgi.py
meimei/: __init__.py
meimei/home/: home.py
meimei/home/templates/: index.html.jinja2
meimei/models/: model.h5
meimei/templates/: layout.html.jinja2
scripts/: train_model.py
tests/: test_meimei.py
